--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">About us</h1>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--アバウトアス-->
-      <section id="about-us-page" class="about-us-page about-us-page-top">
+      <section class="about-us-page about-us-page-top">
         <div class="about-us-page__inner inner">
           <div class="about-us-page__img">
             <div class="about-us-page__img-small md-none">
@@ -196,7 +196,7 @@
         </div>
       </section>
       <!--ギャラリー-->
-      <section id="gallery" class="gallery gallery-top">
+      <section class="gallery gallery-top">
         <div class="gallery__inner inner">
           <div class="gallery__title section-title">
             <p class="section-title__sub">Gallery</p>
@@ -273,7 +273,7 @@
       </section>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
