--- a/src/blog-page-detail.html
+++ b/src/blog-page-detail.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Blog</h1>
@@ -180,7 +180,7 @@
         </div>
       </div>
       <!--ブログ-->
-      <section id="blog-page-detail" class="blog-page-detail blog-page-detail-top">
+      <section class="blog-page-detail blog-page-detail-top">
         <div class="blog-page-detail__inner inner">
           <div class="blog-page-detail__container blog-page-container">
             <div class="blog-page-detail__container-left blog-page-container--left">
@@ -371,7 +371,7 @@
         </div>
       </section>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-detail-top">
+      <section class="contact contact-detail-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
