--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Blog</h1>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--ブログ-->
-      <section id="blog-page" class="blog-page blog-page-top">
+      <section class="blog-page blog-page-top">
         <div class="blog-page__inner inner">
           <div class="blog-page__container blog-page-container">
             <div class="blog-page__container-left blog-page-container--left">
@@ -477,7 +477,7 @@
       </section>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
