--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Campaign</h1>
@@ -188,7 +188,7 @@
         </div>
       </div>
       <!--コンテンツ-->
-      <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
+      <section class="campaign-page-contents campaign-page-contents-top">
         <div class="campaign-page-contents__inner inner">
           <ul class="campaign-page-contents__items campaign-page-card">
             <li class="campaign-page-card__item campaign-card">
@@ -321,7 +321,7 @@
         </div>
       </div>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-campaign-top">
+      <section class="contact contact-campaign-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
