--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
         </div>
       </div>
       <!--キャンペーン-->
-      <section id="campaign" class="campaign campaign-top">
+      <section class="campaign campaign-top">
         <div class="campaign__inner inner">
           <div class="campaign__title section-title">
             <p class="section-title__sub">Campaign</p>
@@ -295,7 +295,7 @@
         </div>
       </section>
       <!--アバウトアス-->
-      <section id="about-us" class="about-us about-us-top">
+      <section class="about-us about-us-top">
         <div class="about-us__inner inner">
           <div class="about-us__title section-title">
             <p class="section-title__sub">About us</p>
@@ -323,7 +323,7 @@
         </div>
       </section>
       <!--インフォメーション-->
-      <section id="information" class="information information-top">
+      <section class="information information-top">
         <div class="information__inner inner">
           <div class="information__title section-title">
             <p class="section-title__sub">Information</p>
@@ -344,7 +344,7 @@
         </div>
       </section>
       <!--ブログ-->
-      <section id="blog" class="blog blog-top">
+      <section class="blog blog-top">
         <div class="blog__inner inner">
           <div class="blog__title section-title">
             <p class="section-title__sub section-title__sub--white">Blog</p>
@@ -394,7 +394,7 @@
         </div>
       </section>
       <!--ボイス-->
-      <section id="voice" class="voice voice-top">
+      <section class="voice voice-top">
         <div class="voice__inner inner">
           <div class="voice__title section-title">
             <p class="section-title__sub">Voice</p>
@@ -454,7 +454,7 @@
         </div>
       </section>
       <!--プライス-->
-      <section id="price" class="price price-top">
+      <section class="price price-top">
         <div class="price__inner inner">
           <div class="price__title section-title">
             <p class="section-title__sub">Price</p>
@@ -522,7 +522,7 @@
         </div>
       </section>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-top">
+      <section class="contact contact-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
