--- a/src/page-404.html
+++ b/src/page-404.html
@@ -166,7 +166,7 @@
           </div>
         </div>
         <!--404-->
-        <section id="page-404" class="page-404 page-404-top">
+        <section class="page-404 page-404-top">
           <div class="page-404__inner inner">
             <div class="page-404__box">
               <h1 class="page-404__title">404</h1>
