--- a/src/privacy-page.html
+++ b/src/privacy-page.html
@@ -157,7 +157,7 @@
       </header>
       <main>
         <!--サブビュー-->
-        <section id="sub-page-mv" class="sub-page-mv">
+        <section class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
               <h1 class="sub-page-mv__title-main page-section-title">Privacy Policy</h1>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <!--プライバシー-->
-        <section  id="privacy-page" class="privacy-page privacy-page-top">
+        <section class="privacy-page privacy-page-top">
           <div class="privacy-page__inner inner">
             <h2 class="privacy-page__title">プライバシーポリシー</h2>
             <div class="privacy-page__items">
@@ -216,7 +216,7 @@
         </section>
 
         <!--コンタクト-->
-        <section id="contact" class="contact contact-privacy-page-top">
+        <section class="contact contact-privacy-page-top">
           <div class="contact__inner inner">
             <div class="contact__container">
               <div class="contact__box contact-box">
