--- a/src/site-map-page.html
+++ b/src/site-map-page.html
@@ -157,7 +157,7 @@
       </header>
       <main>
         <!--サブビュー-->
-        <section id="sub-page-mv" class="sub-page-mv">
+        <section class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
               <h1 class="sub-page-mv__title-main page-section-title">Site MAP</h1>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <!--サイトマップ-->
-        <section id="site-map-page" class="site-map-page site-map-page-top">
+        <section class="site-map-page site-map-page-top">
           <div class="site-map-page__inner inner">
             <div class="site-map__container site-map-menu">
               <div class="site-map-menu__left">
@@ -256,7 +256,7 @@
           </div>
         </section>
         <!--コンタクト-->
-        <section id="contact" class="contact contact-site-map-page-top">
+        <section class="contact contact-site-map-page-top">
           <div class="contact__inner inner">
             <div class="contact__container">
               <div class="contact__box contact-box">
