--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -157,7 +157,7 @@
       </header>
       <main>
         <!--サブビュー-->
-        <section id="sub-page-mv" class="sub-page-mv">
+        <section class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
               <h1 class="sub-page-mv__title-main page-section-title">Contact</h1>
@@ -181,7 +181,7 @@
           </div>
         </div>
         <!--サンクス-->
-        <section id="thanks-page" class="thanks-pagee thanks-page-top">
+        <section class="thanks-pagee thanks-page-top">
           <div class="thanks-page__inner inner">
             <div class="thanks-page__box">
               <p class="thanks-page__title">お問い合わせ内容を送信完了しました。</p>
