--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Voice</h1>
@@ -188,7 +188,7 @@
         </div>
       </div>
       <!--コンテンツ-->
-      <section id="voice-page" class="voice-page voice-page-top">
+      <section class="voice-page voice-page-top">
         <div class="voice-page__inner inner">
           <div class="voice-page__cards voice-cards">
             <div class="voice-cards__item-box voice-card">
@@ -347,7 +347,7 @@
         </div>
       </section>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-campaign-top">
+      <section class="contact contact-campaign-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
@@ -428,7 +428,7 @@
         </div>
         <div class="footer__container footer-menu">
           <div class="footer-menu__left">
-            <ul class="footer-menu__">
+            <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
                 <a href="campaign-page.html" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
