--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Contact</h1>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--お問い合わせ-->
-      <section id="contact-page" class="contact-page contact-page-top">
+      <section class="contact-page contact-page-top">
         <div class="contact-page__inner inner">
           <form action="" class="contact-page__form contact-form contact-form">
             <div class="contact-form__labels">
