--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">FAQ</h1>
@@ -241,7 +241,7 @@
       </div>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-faq-top">
+      <section class="contact contact-faq-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
