--- a/src/information-page.html
+++ b/src/information-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Information</h1>
@@ -249,7 +249,7 @@
         </div>
       </div>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
