--- a/src/price-page.html
+++ b/src/price-page.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--サブビュー-->
-      <section id="sub-page-mv" class="sub-page-mv">
+      <section class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
             <h1 class="sub-page-mv__title-main page-section-title">Price</h1>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <!--プライス-->
-      <section id="price-page" class="price-page price-page-top">
+      <section class="price-page price-page-top">
         <div class="price-page__inner inner">
           <div class="price-page__items">
             <div class="price-page__items-item price-page-item">
@@ -264,7 +264,7 @@
         </div>
       </section>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-price-top">
+      <section class="contact contact-price-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
