--- a/src/terms-page.html
+++ b/src/terms-page.html
@@ -157,7 +157,7 @@
       </header>
       <main>
         <!--サブビュー-->
-        <section id="sub-page-mv" class="sub-page-mv">
+        <section class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
               <h1 class="sub-page-mv__title-main page-section-title">Terms of Service</h1>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <!--利用規約-->
-        <section id="terms-page" class="terms-page terms-page-top">
+        <section class="terms-page terms-page-top">
           <div class="terms-page__inner inner">
             <h2 class="terms-page__title">利用規約</h2>
             <div class="terms-page__items">
@@ -206,7 +206,7 @@
         </section>
 
         <!--コンタクト-->
-        <section id="contact" class="contact contact-terms-page-top">
+        <section class="contact contact-terms-page-top">
           <div class="contact__inner inner">
             <div class="contact__container">
               <div class="contact__box contact-box">
