料金表修正

--- a/src/price-page.html
+++ b/src/price-page.html
@@ -181,9 +181,9 @@
         <div class="price-page__inner inner">
           <div class="price-page__items">
             <div class="price-page__items-item price-page-item">
+              <h2 class="price-page-item__head-sp">ライセンス講習</h2>
+              <h2 class="price-page-item__head-pc">ライセンス講習</h2>
               <table class="price-page-item__box price-page-box">
-                <h2 class="price-page-box__head-sp">ライセンス講習</h2>
-                <h2 class="price-page-box__head-pc">ライセンス講習</h2>
                 <tr>
                   <td class="price-page-box__name">オープンウォーター<br class="md-show" />ダイバーコース</td>
                   <td class="price-page-box__price">¥50,000</td>
@@ -199,9 +199,9 @@
               </table>
             </div>
             <div class="price-page__items-item price-page-item">
+              <h2 class="price-page-item__head-sp">体験ダイビング</h2>
+              <h2 class="price-page-item__head-pc-long">体験ダイビング</h2>
               <table class="price-page-item__box price-page-box">
-                <h2 class="price-page-box__head-sp">体験ダイビング</h2>
-                <h2 class="price-page-box__head-pc-long">体験ダイビング</h2>
                 <tr>
                   <td class="price-page-box__name">ビーチ体験ダイビング<br class="md-show" />(半日)</td>
                   <td class="price-page-box__price">¥7,000</td>
@@ -221,9 +221,9 @@
               </table>
             </div>
             <div class="price-page__items-item price-page-item">
+              <h2 class="price-page-item__head-sp-middle">ファンダイビング</h2>
+              <h2 class="price-page-item__head-pc-long">ファンダイビング</h2>
               <table class="price-page-item__box price-page-box">
-                <h2 class="price-page-box__head-sp-middle">ファンダイビング</h2>
-                <h2 class="price-page-box__head-pc-long">ファンダイビング</h2>
                 <tr>
                   <td class="price-page-box__name">ビーチダイビング<br class="md-show" />(2ダイブ)</td>
                   <td class="price-page-box__price">¥14,000</td>
@@ -243,9 +243,9 @@
               </table>
             </div>
             <div class="price-page__items-item price-page-item">
+              <h2 class="price-page-item__head-sp-last">スペシャルダイビング</h2>
+              <h2 class="price-page-item__head-pc">スペシャルダイビング</h2>
               <table class="price-page-item__box price-page-box">
-                <h2 class="price-page-box__head-sp-last">スペシャルダイビング</h2>
-                <h2 class="price-page-box__head-pc">スペシャルダイビング</h2>
                 <tr>
                   <td class="price-page-box__name">貸切ダイビング<br class="md-show" />(2ダイブ)</td>
                   <td class="price-page-box__price">¥24,000</td>
