ギャラリー修正

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -227,7 +227,7 @@
         <div class="gallery__modal gallery-modal">
           <ul class="gallery-modal__items">
             <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-1">
-              <div class="gallery-modal__inner inner">
+              <div class="gallery-modal__inner">
                 <div class="gallery-modal__img">
                   <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りをオレンジ色の魚達が泳いでいる様子" />
                 </div>
