ブログページと詳細修正

--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -180,8 +180,8 @@
       <section class="blog-page blog-page-top">
         <div class="blog-page__inner inner">
           <div class="blog-page__container blog-page-container">
-            <div class="blog-page__container-left blog-page-container--left">
-              <div class="blog-cards blog-cards--another">
+            <div class="blog-page-container__left">
+              <div class="blog-page-container__cards blog-page-cards">
                 <a href="blog-page-detail.html" class="blog-page-cards__item-box blog-card">
                   <div class="blog-card__item">
                     <div class="blog-card__img">
@@ -318,8 +318,8 @@
                 </div>
               </div>
             </div>
-            <div class="blog-page__container-right">
-              <div class="blog-heading blog-heading-top">
+            <div class="blog-page-container__right">
+              <div class="blog-page-container__heading blog-heading blog-heading-top">
                 <div class="blog-heading__inner">
                   <div class="blog-heading__container">
                     <div class="blog-heading__title-box">
