--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -179,8 +179,8 @@
       <!--アコーディオン-->
       <div class="faq-page__accordion faq-page-accordion faq-page-accordion-top js-accordion">
         <div class="faq-page-accordion__inner inner">
-          <div class="faq-page-accordion__container">
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+          <div class="faq-page-accordion__container accordion-container">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -188,7 +188,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -196,7 +196,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -204,7 +204,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -212,7 +212,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -220,7 +220,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
@@ -228,7 +228,7 @@
                 <p class="faq-page-accordion__text">ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります</p>
               </div>
             </div>
-            <div class="faq-page-accordion__item js-faq-page-accordion-item">
+            <div class="faq-page-accordion__item accordion-item js-faq-page-accordion-item">
               <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
