--- a/src/price-page.html
+++ b/src/price-page.html
@@ -179,8 +179,8 @@
       <!--プライス-->
       <section class="price-page price-page-top">
         <div class="price-page__inner inner">
-          <div class="price-page__items">
-            <div class="price-page__items-item price-page-item">
+          <div class="price-page__items price-page-items">
+            <div class="price-page-items__item price-page-item">
               <h2 class="price-page-item__head-sp">ライセンス講習</h2>
               <h2 class="price-page-item__head-pc">ライセンス講習</h2>
               <table class="price-page-item__box price-page-box">
@@ -198,7 +198,7 @@
                 </tr>
               </table>
             </div>
-            <div class="price-page__items-item price-page-item">
+            <div class="price-page-items__item price-page-item">
               <h2 class="price-page-item__head-sp">体験ダイビング</h2>
               <h2 class="price-page-item__head-pc-long">体験ダイビング</h2>
               <table class="price-page-item__box price-page-box">
@@ -220,7 +220,7 @@
                 </tr>
               </table>
             </div>
-            <div class="price-page__items-item price-page-item">
+            <div class="price-page-items__item price-page-item">
               <h2 class="price-page-item__head-sp-middle">ファンダイビング</h2>
               <h2 class="price-page-item__head-pc-long">ファンダイビング</h2>
               <table class="price-page-item__box price-page-box">
@@ -242,7 +242,7 @@
                 </tr>
               </table>
             </div>
-            <div class="price-page__items-item price-page-item">
+            <div class="price-page-items__item price-page-item">
               <h2 class="price-page-item__head-sp-last">スペシャルダイビング</h2>
               <h2 class="price-page-item__head-pc">スペシャルダイビング</h2>
               <table class="price-page-item__box price-page-box">
